Support soft word breaks in menu titles (#68)
* feat: consider soft word breaks in menu titles

* feat: break long menu titles properly

* test: ensure soft hyphens are rendered properly

--- a/hugo.spec.yaml
+++ b/hugo.spec.yaml
@@ -12,6 +12,9 @@ languages:
                   pageRef: /about
                   params:
                       description: Erfahren Sie wer wir sind uns was uns antreibt.
+                - identifier: code-of-conduct
+                  pageRef: /code-of-conduct
+                  name: Verhaltens&shy;kodex
 
 params:
     themes:
